2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	dep.mk: Regenerated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	Shorthand for filters which map multiple texts to a common
	replacement text.

	* filter.c (build_filter_from_list): Allow tuples to denote
	multiple keys mapping to the same value.

	* lib.c (do_curry_123_2, do_curry_123_1): New static functions.
	(curry_123_2, curry_123_1): New functions.

	* lib.h (curry_123_2, curry_123_1): New functions declared.

	* match.c (v_deffilter): Allow tuples of strings rather than
	just pairs.

	* txr.1: Updated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y: Remove mention of nonexistent terminal \\ 
	from %right associativity clause.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (fun_k): New keyword variable.
	(function_filter): Use :fun keyword symbol instead of fun.
	(filter_init): New keyword variable initialized.

	* filter.h (upcase_k, downcase_k, fun_k): Declared.

	* txr.1: Updated.

2011-10-25  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_bind): Use sem_error to throw errors with line number
	info.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	Bugs #34641, #34629.

	* lib.c (search_str_tree): If multiple strings from the needle tree
	matching within within the haystack string, then take the leftmost
	match. If there are multiple matches at the same leftmost position,
	take the longest one.

2011-10-24  Kaz Kylheku  <kaz@kylheku.com>

	* filter.c (function_filter): New function.
	(get_filter): Handle (fun ...) syntax.

	* match.c (v_bind): Establish dynamic environment frame around
	dest_bind, and stash the bindings there so filters can have access 
	to the bindings.
	(v_output): Likewise, around do_output calls.
	(v_fun): New function.
	(match_files): Function handling broken out into v_fun.
	(match_funcall): New function.

	* match.h (match_funcall): Declared.

	* unwind.c (uw_push_env): Initialize match_context.
	(uw_get_match_context, uw_set_match_context): New functions.
